added: the essential html for the home page

--- a/wp-content/themes/jfd/scss/style.scss
+++ b/wp-content/themes/jfd/scss/style.scss
@@ -11,3 +11,7 @@ License URI: LICENSE
 Text Domain: wp-bootstrap-starter
 Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, right-sidebar, custom-background, e-commerce, theme-options, sticky-post, full-width-template
 */
+
+.container {
+    max-width: 1200px;
+}
