--- a/wp-content/themes/jfd/style.css
+++ b/wp-content/themes/jfd/style.css
@@ -11,5 +11,5 @@ License URI: LICENSE
 Text Domain: wp-bootstrap-starter
 Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, right-sidebar, custom-background, e-commerce, theme-options, sticky-post, full-width-template
 */
-
-
+.container {
+  max-width: 1200px; }
