--- a/wp-content/themes/jfd/style.css
+++ b/wp-content/themes/jfd/style.css
@@ -13,3 +13,119 @@ Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, 
 */
 .container {
   max-width: 1200px; }
+
+a {
+  color: #111111; }
+  a:hover {
+    text-decoration: none; }
+
+header#masthead .contact svg,
+header#masthead .contact .fa {
+  color: #FF6D00;
+  margin-right: 0.5em; }
+
+header#masthead .email {
+  margin-right: 2em; }
+
+header#masthead .header-section-1 {
+  background: #111111;
+  padding: 0.5em 0; }
+  header#masthead .header-section-1 a {
+    color: white;
+    transition: all 0.3s; }
+    header#masthead .header-section-1 a:hover {
+      color: #0D47A1; }
+  header#masthead .header-section-1 .social {
+    display: flex;
+    justify-content: space-around; }
+
+header#masthead .header-section-2 {
+  padding: 1em 0; }
+
+header#masthead .primary {
+  display: flex;
+  width: 100%;
+  justify-content: space-around; }
+  header#masthead .primary a {
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: all 0.3s; }
+    header#masthead .primary a:hover {
+      color: #FF6D00; }
+
+header#masthead .quote a {
+  text-transform: capitalize;
+  background: white;
+  border: 2px solid #0D47A1;
+  color: #0D47A1;
+  font-weight: bold;
+  padding: 0.5em; }
+
+.home .block-info {
+  text-align: center; }
+
+.home .main-section-2 {
+  padding-top: 5em;
+  padding-bottom: 10em;
+  box-sizing: border-box; }
+  .home .main-section-2 h2 {
+    text-align: center; }
+  .home .main-section-2 p {
+    color: grey; }
+
+.home .main-section-3 {
+  background: #F7F7F7;
+  padding-top: 5em; }
+  .home .main-section-3 .btn {
+    background: #0D47A1;
+    font-weight: bold;
+    padding: 0.75em 2em;
+    text-transform: uppercase;
+    border: 1px solid #0D47A1; }
+    .home .main-section-3 .btn:hover {
+      background: transparent; }
+
+.home .main-section-4 {
+  padding: 5em 0;
+  background: #132229;
+  text-align: center;
+  color: white;
+  font-size: 1.3em;
+  box-sizing: border-box; }
+  .home .main-section-4 .btn {
+    border: 1px solid #FF6D00;
+    color: white;
+    background: transparent;
+    transition: all 0.3s;
+    font-size: 1.1em;
+    padding: 0.5em 1em;
+    margin-top: 3em;
+    text-transform: capitalize; }
+    .home .main-section-4 .btn:hover {
+      background: #FF6D00; }
+  .home .main-section-4 p {
+    color: grey; }
+
+.home .circle-icon {
+  margin: 1em auto;
+  max-height: 150px;
+  max-width: 150px;
+  width: 100%;
+  height: 100%;
+  background: #0D47A1;
+  border-radius: 50%;
+  font-size: 2.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; }
+
+footer.site-footer .footer-section-1 {
+  background: #0D47A1;
+  color: white;
+  padding: 2em 0; }
+  footer.site-footer .footer-section-1 a {
+    color: white; }
+
+footer.site-footer .footer-section-3 {
+  background: black; }
