--- a/wp-content/themes/jfd/scss/home.scss
+++ b/wp-content/themes/jfd/scss/home.scss
@@ -16,12 +16,42 @@
 
             min-height: 600px;
 
+
+            .btn input {
+                background: $orange;
+                padding: 0.5em 1em;
+                text-align: center;
+                font-weight: bold;
+                max-width: 200px;
+                width: 100%;
+                text-transform: uppercase;
+                font-size: 1.2em;
+                align-items: center;
+            }
+
+
+            .form-input {
+                max-width: 1200px;
+                margin: auto;
+                margin-top: 2em;
+                align-items: center;
+            }
+
+            .input input {
+                padding: 0.6em 1em;
+            }
+
             .title {
                 color: white;
-                text-transform: capitalize;
+                text-transform: uppercase;
                 font-size: 4em;
                 padding-top: 2em;
                 text-align: center;
+                word-spacing: 3px;
+
+                &-2 {
+                    text-align: center;
+                }
             }
         }
 
@@ -58,9 +88,19 @@
             }
 
 
-            h2 {
+            .header {
                 text-align: center;
-                margin-bottom: 3em;
+
+                font-size: 3em;
+                text-transform: uppercase;
+
+                &-2 {
+                    text-align: center;
+                    text-transform: capitalize;
+                    color: $grey2;
+                    margin-bottom: 1.5em;
+
+                }
             }
 
             p {
@@ -70,7 +110,7 @@
 
         &-3 {
             background: $grey;
-            padding-top: 5em;
+            padding: 5em 0;
 
             .btn {
                 background: $blue;
@@ -88,13 +128,16 @@
 
         &-4 {
             padding: 5em 0;
-            background-image: url('http://jfd.co/wp-content/uploads/2018/04/section-3-bg.png');
-            background-size: cover;
+            background-image: url('http://jfd.co/wp-content/uploads/2018/05/s4-bg.png'); //            background-size: cover;
             background-position: center;
             text-align: center;
             color: white;
             font-size: 1.3em;
             box-sizing: border-box;
+
+            .header {
+                font-size: 2em;
+            }
 
 
             .btn {
@@ -115,6 +158,15 @@
             p {
                 color: grey;
             }
+
+            .project {
+
+                .project-img {
+                    margin: 0.5em 0;
+                }
+            }
+
+
         }
     }
 
