--- a/wp-content/themes/jfd/style.css
+++ b/wp-content/themes/jfd/style.css
@@ -12,6 +12,58 @@ Text Domain: wp-bootstrap-starter
 Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, right-sidebar, custom-background, e-commerce, theme-options, sticky-post, full-width-template
 */
 /*=============
+   ANIMATIONS
+==============*/
+@-webkit-keyframes bottom-arrow {
+  from {
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
+  50% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px); }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1; } }
+@keyframes bottom-arrow {
+  from {
+    -webkit-transform: translateY(0);
+            transform: translateY(0); }
+  50% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px); }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1; } }
+
+@-webkit-keyframes bottom-fade-out {
+  from {
+    opacity: 1; }
+  30% {
+    opacity: 0; }
+  to {
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px); } }
+
+@keyframes bottom-fade-out {
+  from {
+    opacity: 1; }
+  30% {
+    opacity: 0; }
+  to {
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px); } }
+
+.appear {
+  -webkit-animation: bottom-arrow 0.7s ease forwards;
+          animation: bottom-arrow 0.7s ease forwards; }
+
+.fade-out {
+  -webkit-animation: bottom-fade-out 1s forwards;
+          animation: bottom-fade-out 1s forwards; }
+
+/*=============
    CLASSES
 ==============*/
 .container {
@@ -30,6 +82,16 @@ Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, 
 .center-all {
   justify-content: center;
   align-items: center; }
+
+.fixed-bottom-block {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-around;
+  min-width: 100px;
+  padding: 1em;
+  transition: all 0.5s; }
 
 @media (max-width: 576px) {
   .center-x-sm {
@@ -72,6 +134,20 @@ Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, 
 .fluid {
   width: 100%; }
 
+.scroll-arrow {
+  background: #FF6D00;
+  border-radius: 50%;
+  padding: 1em 1.25em;
+  transition: all 0.3s;
+  border: 2px solid #FF6D00; }
+  .scroll-arrow .fa,
+  .scroll-arrow svg {
+    color: white; }
+  .scroll-arrow:hover {
+    background: #0D47A1;
+    cursor: pointer;
+    border-color: white; }
+
 /*=============
     GENERAL
 ==============*/
@@ -79,6 +155,11 @@ a {
   color: #111111; }
   a:hover {
     text-decoration: none; }
+
+h1,
+h2,
+h3 {
+  font-family: 'Heebo', sans-serif; }
 
 /*=============
     HEADER
@@ -157,12 +238,32 @@ header#masthead {
 
 .home .main-section-1 {
   min-height: 600px; }
+  .home .main-section-1 .btn input {
+    background: #FF6D00;
+    padding: 0.5em 1em;
+    text-align: center;
+    font-weight: bold;
+    max-width: 200px;
+    width: 100%;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    align-items: center; }
+  .home .main-section-1 .form-input {
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 2em;
+    align-items: center; }
+  .home .main-section-1 .input input {
+    padding: 0.6em 1em; }
   .home .main-section-1 .title {
     color: white;
-    text-transform: capitalize;
+    text-transform: uppercase;
     font-size: 4em;
     padding-top: 2em;
-    text-align: center; }
+    text-align: center;
+    word-spacing: 3px; }
+    .home .main-section-1 .title-2 {
+      text-align: center; }
 
 .home .main-section-2 {
   padding-top: 5em;
@@ -178,15 +279,21 @@ header#masthead {
       background: #3FAF6C; }
     .home .main-section-2 .block-info:nth-of-type(4) .circle-icon {
       background: #EF5350; }
-  .home .main-section-2 h2 {
+  .home .main-section-2 .header {
     text-align: center;
-    margin-bottom: 3em; }
+    font-size: 3em;
+    text-transform: uppercase; }
+    .home .main-section-2 .header-2 {
+      text-align: center;
+      text-transform: capitalize;
+      color: grey;
+      margin-bottom: 1.5em; }
   .home .main-section-2 p {
     color: grey; }
 
 .home .main-section-3 {
   background: #F7F7F7;
-  padding-top: 5em; }
+  padding: 5em 0; }
   .home .main-section-3 .btn {
     background: #0D47A1;
     font-weight: bold;
@@ -199,13 +306,14 @@ header#masthead {
 
 .home .main-section-4 {
   padding: 5em 0;
-  background-image: url("http://jfd.co/wp-content/uploads/2018/04/section-3-bg.png");
-  background-size: cover;
+  background-image: url("http://jfd.co/wp-content/uploads/2018/05/s4-bg.png");
   background-position: center;
   text-align: center;
   color: white;
   font-size: 1.3em;
   box-sizing: border-box; }
+  .home .main-section-4 .header {
+    font-size: 2em; }
   .home .main-section-4 .btn {
     border: 1px solid #FF6D00;
     color: white;
@@ -219,6 +327,8 @@ header#masthead {
       background: #FF6D00; }
   .home .main-section-4 p {
     color: grey; }
+  .home .main-section-4 .project .project-img {
+    margin: 0.5em 0; }
 
 .home .circle-icon {
   margin: 1em auto;
@@ -241,6 +351,15 @@ header#masthead {
     text-align: center; } }
 
 /*=============
+    FAQ
+==============*/
+#faq h3 {
+  padding-bottom: 3em; }
+
+#faq .faq-container {
+  padding: 5em 1em; }
+
+/*=============
     FOOTER
 ==============*/
 footer.site-footer .footer-section-1 {
@@ -252,11 +371,11 @@ footer.site-footer .footer-section-1 {
     color: white;
     text-transform: uppercase; }
   footer.site-footer .footer-section-1 .contact {
-    font-size: 1.2em;
+    font-size: 1.3em;
     border: 2px solid white;
     border-radius: 5px;
     transition: all 0.3s;
-    padding: 0.5em 1em; }
+    padding: 0.5em 1.1em; }
     footer.site-footer .footer-section-1 .contact:hover {
       background: #FF6D00;
       border-color: #FF6D00; }
