--- a/wp-content/themes/wp-bootstrap-starter/style.css
+++ b/wp-content/themes/wp-bootstrap-starter/style.css
@@ -4,7 +4,7 @@ Theme URI: https://afterimagedesigns.com/wp-bootstrap-starter/
 Author: Afterimage Designs
 Author URI: https://afterimagedesigns.com/
 Description:  The best WordPress starter theme based on the most powerful frameworks in the world: "_s" (by Automattic, the main people behind WordPress development), Twitter Bootstrap (the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web) and Font Awesome (or Fontawesome, a full suite of 675+ pictographic icons for easy scalable vector graphics on websites). This theme, like WordPress, is licensed under the GPL. You can use this theme as base for your next WordPress theme project and you are allowed to remove the link at the footer or do whatever you want. Your feedback on how we can continuously improve this WordPress Starter Theme Bootstrap will be highly appreciated. Page templates includes Right-sidebar (default page template), Left-Sidebar, Full-Width, Blank with container, Blank without container Page. Other features - Currently using Bootstrap v4.0.0 , Widgetized footer area, WooCommerce ready, Compatible with Contact Form 7, Compatible with Visual Composer, Compatible with Elementor Page Builder. This theme will be an active project which we will update from time to time. Check this page regularly for the updates.
-Version: 3.0.9
+Version: 3.0.13
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: wp-bootstrap-starter
@@ -243,7 +243,7 @@ p {
   margin-bottom: 1.5em;
 }
 h1.entry-title {
-  font-size: 21px;
+  font-size: 1.31rem;
   border-bottom: 1px solid #eaecef;
 }
 h2.entry-title {
@@ -367,7 +367,7 @@ body:not(.theme-preset-active) #masthead .navbar-nav > li > a {
   color: #cdbfe3;
   padding: 0.5rem;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 body:not(.theme-preset-active) #masthead .navbar-nav > li > a:hover,
@@ -415,7 +415,11 @@ body:not(.theme-preset-active) #masthead .navbar-nav > li.current_page_item > a 
 
 .dropdown-menu .dropdown-item {
   white-space: normal;
-  font-size: 14px;
+  background: transparent;
+  line-height: 1.6;
+}
+.dropdown-menu .dropdown-item:hover {
+  background: transparent;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -430,7 +434,7 @@ body:not(.theme-preset-active) #masthead .navbar-nav > li.current_page_item > a 
   }
 }
 @media screen and (max-width: 991px) {
-  .dropdown-menu {
+  .navbar-nav .dropdown-menu {
     border: medium none;
     margin-left: 1.250rem;
     padding: 0;
@@ -628,7 +632,7 @@ a img.aligncenter {
 --------------------------------------------------------------*/
 .widget {
   margin: 0 0 1.5em;
-  font-size: 14px;
+  font-size: 0.875rem;
   /* Make sure select elements fit in widgets. */
 }
 .widget select {
@@ -647,6 +651,9 @@ a img.aligncenter {
 .half-rule {
   width: 6rem;
   margin: 2.5rem 0;
+}
+.widget_categories .nav-link {
+  display: inline-block;
 }
 
 /*--------------------------------------------------------------
@@ -908,7 +915,9 @@ body:not(.theme-preset-active) footer#colophon {
   color: #99979c;
   background-color: #f7f7f7;
 }
-
+.navbar-dark .site-info {
+  color: #fff;
+}
 .copyright {
   font-size: 0.875rem;
   margin-bottom: 0;
@@ -941,7 +950,7 @@ body:not(.theme-preset-active) footer#colophon {
   .navbar-dark .dropdown-item {
     color: #fff;
   }
-  .dropdown-menu {
+  .navbar-nav .dropdown-menu {
     background: transparent;
     box-shadow: none;
     border: none;
@@ -952,7 +961,7 @@ body:not(.theme-preset-active) footer#colophon {
 --------------------------------------------------------------*/
 @media only screen and (max-width: 1024px) {
   html {
-    font-size: 93%;
+    font-size: 90%;
   }
 }
 /*--------------------------------------------------------------
@@ -960,7 +969,7 @@ body:not(.theme-preset-active) footer#colophon {
 --------------------------------------------------------------*/
 @media only screen and (max-width: 960px) {
   html {
-    font-size: 90%;
+    font-size: 85%;
   }
 }
 /*--------------------------------------------------------------
@@ -968,7 +977,7 @@ body:not(.theme-preset-active) footer#colophon {
 --------------------------------------------------------------*/
 @media only screen and (max-width: 768px) {
   html {
-    font-size: 88%;
+    font-size: 80%;
   }
 }
 /*--------------------------------------------------------------
@@ -976,6 +985,6 @@ body:not(.theme-preset-active) footer#colophon {
 --------------------------------------------------------------*/
 @media only screen and (max-width: 480px) {
   html {
-    font-size: 86%;
+    font-size: 75%;
   }
 }
