--- a/wp-content/themes/jfd/style.css
+++ b/wp-content/themes/jfd/style.css
@@ -66,12 +66,23 @@ Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, 
 /*=============
    CLASSES
 ==============*/
+.bold {
+  font-weight: bold; }
+  .bold li {
+    font-weight: bold; }
+  .bold a {
+    font-weight: bold; }
+
 .container {
   max-width: 1200px; }
   .container.slim {
     max-width: 1000px; }
   .container.slimmer {
     max-width: 800px; }
+  .container.wide {
+    max-width: 1400px; }
+  .container.wider {
+    max-width: 1600px; }
 
 .center-x {
   justify-content: center; }
@@ -135,18 +146,22 @@ Tags: blog, custom-menu, featured-images, threaded-comments, translation-ready, 
   width: 100%; }
 
 .scroll-arrow {
-  background: #FF6D00;
+  background: #72C032;
   border-radius: 50%;
   padding: 1em 1.25em;
   transition: all 0.3s;
-  border: 2px solid #FF6D00; }
+  border: 2px solid #72C032; }
   .scroll-arrow .fa,
   .scroll-arrow svg {
     color: white; }
   .scroll-arrow:hover {
-    background: #0D47A1;
+    background: #662D91;
     cursor: pointer;
     border-color: white; }
+
+.und {
+  padding: 1em 0;
+  text-decoration: underline; }
 
 /*=============
     GENERAL
@@ -170,7 +185,7 @@ header#masthead {
   transition: all 0.3s; }
   header#masthead .contact svg,
   header#masthead .contact .fa {
-    color: #FF6D00;
+    color: #72C032;
     margin-right: 0.5em; }
   header#masthead .email {
     margin-right: 2em; }
@@ -181,9 +196,9 @@ header#masthead {
       color: white;
       transition: all 0.3s; }
       header#masthead .header-section-1 a:hover {
-        color: #0D47A1; }
+        color: #662D91; }
     header#masthead .header-section-1 .contact a:hover {
-      color: #FF6D00; }
+      color: #72C032; }
     header#masthead .header-section-1 .social {
       display: flex;
       justify-content: space-around; }
@@ -198,11 +213,11 @@ header#masthead {
       font-weight: 500;
       transition: all 0.3s; }
       header#masthead .primary a:hover {
-        color: #FF6D00; }
+        color: #72C032; }
   header#masthead .site-logo {
     width: 30%; }
   header#masthead .secondary a {
-    background: #F7F7F7;
+    background: #eee;
     font-weight: 500;
     text-transform: uppercase;
     border-bottom: 1px solid grey;
@@ -210,20 +225,20 @@ header#masthead {
     padding-left: 1em;
     transition: all 0.3s; }
     header#masthead .secondary a:hover {
-      color: #0D47A1; }
+      color: #662D91; }
   header#masthead .quote {
     text-align: right; }
     header#masthead .quote a {
       text-transform: capitalize;
       background: white;
-      border: 2px solid #0D47A1;
-      color: #0D47A1;
+      border: 2px solid #662D91;
+      color: #662D91;
       font-weight: bold;
       padding: 0.5em;
       transition: all 0.5s; }
       header#masthead .quote a:hover {
         color: white;
-        background: #0D47A1; }
+        background: #662D91; }
 
 @media (max-width: 890px) {
   header#masthead .site-title,
@@ -239,7 +254,7 @@ header#masthead {
 .home .main-section-1 {
   min-height: 600px; }
   .home .main-section-1 .btn input {
-    background: #FF6D00;
+    background: #72C032;
     padding: 0.5em 1em;
     text-align: center;
     font-weight: bold;
@@ -292,21 +307,21 @@ header#masthead {
     color: grey; }
 
 .home .main-section-3 {
-  background: #F7F7F7;
+  background: #eee;
   padding: 5em 0; }
   .home .main-section-3 .btn {
-    background: #0D47A1;
+    background: #662D91;
     font-weight: bold;
     padding: 0.75em 2em;
     text-transform: uppercase;
-    border: 2px solid #0D47A1; }
+    border: 2px solid #662D91; }
     .home .main-section-3 .btn:hover {
       background: transparent;
-      color: #0D47A1; }
+      color: #662D91; }
 
 .home .main-section-4 {
   padding: 5em 0;
-  background-image: url("http://jfd.co/wp-content/uploads/2018/05/s4-bg.png");
+  background-image: url("http://jfd.co/wp-content/uploads/2018/05/s4-bg-2.png");
   background-position: center;
   text-align: center;
   color: white;
@@ -315,7 +330,7 @@ header#masthead {
   .home .main-section-4 .header {
     font-size: 2em; }
   .home .main-section-4 .btn {
-    border: 1px solid #FF6D00;
+    border: 1px solid #72C032;
     color: white;
     background: transparent;
     transition: all 0.3s;
@@ -324,7 +339,7 @@ header#masthead {
     margin-top: 3em;
     text-transform: capitalize; }
     .home .main-section-4 .btn:hover {
-      background: #FF6D00; }
+      background: #72C032; }
   .home .main-section-4 p {
     color: grey; }
   .home .main-section-4 .project .project-img {
@@ -335,7 +350,7 @@ header#masthead {
   max-width: 150px;
   width: 100%;
   height: 150px;
-  background: #0D47A1;
+  background: #662D91;
   border-radius: 50%;
   font-size: 2.5em;
   display: flex;
@@ -353,17 +368,101 @@ header#masthead {
 /*=============
     FAQ
 ==============*/
-#faq h3 {
-  padding-bottom: 3em; }
-
 #faq .faq-container {
   padding: 5em 1em; }
+
+#faq .faq-header {
+  background-image: url(http://jfd.co/wp-content/uploads/2018/05/faq-header.jpg);
+  background-size: cover;
+  position: relative;
+  min-height: 600px;
+  width: 100%; }
+  #faq .faq-header p {
+    color: white;
+    text-align: center;
+    width: 60%;
+    margin: auto;
+    font-size: 1.2em; }
+
+#faq .faq-title {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 3em;
+  font-size: 4em; }
+
+#faq .faq-questions {
+  padding: 0.5em; }
+  #faq .faq-questions a {
+    text-transform: capitalize;
+    font-size: 1.1em; }
+    #faq .faq-questions a:hover {
+      color: #72C032; }
+  #faq .faq-questions li {
+    margin-bottom: 0.25em; }
+
+#faq .help-topic {
+  padding-bottom: 1em;
+  font-size: 2.5em; }
+
+#faq .layer {
+  background: rgba(37, 3, 63, 0.7);
+  height: 100%;
+  width: 100%;
+  position: absolute; }
+
+#faq .list-group-item {
+  font-size: 1.4em; }
+  #faq .list-group-item.active {
+    background: #72C032;
+    border-color: transparent; }
+
+#faq .phone {
+  color: #72C032; }
+  #faq .phone:hover {
+    color: #662D91; }
+
+#faq .section {
+  border-bottom: 1px solid #eee;
+  padding: 2em; }
+  #faq .section:nth-last-child(1) {
+    border-color: transparent; }
+  #faq .section:nth-child(1) {
+    padding-top: 0; }
+
+/*=============
+    CONTACT
+==============*/
+#contact .contact-header {
+  background-image: url(http://jfd.co/wp-content/uploads/2018/05/contact-header.jpg);
+  background-size: cover;
+  position: relative;
+  min-height: 600px;
+  width: 100%;
+  color: white; }
+  #contact .contact-header p {
+    font-size: 1.2em;
+    margin: auto;
+    text-align: center;
+    width: 60%; }
+
+#contact .contact-title {
+  text-align: center;
+  padding-top: 3em;
+  text-transform: uppercase;
+  font-size: 4em; }
+
+#contact .layer {
+  background: rgba(114, 192, 50, 0.7);
+  height: 100%;
+  width: 100%;
+  position: absolute; }
 
 /*=============
     FOOTER
 ==============*/
 footer.site-footer .footer-section-1 {
-  background: #0D47A1;
+  background: #662D91;
   color: white;
   padding: 3em 1em;
   text-transform: capitalize; }
@@ -377,8 +476,8 @@ footer.site-footer .footer-section-1 {
     transition: all 0.3s;
     padding: 0.5em 1.1em; }
     footer.site-footer .footer-section-1 .contact:hover {
-      background: #FF6D00;
-      border-color: #FF6D00; }
+      background: #72C032;
+      border-color: #72C032; }
   footer.site-footer .footer-section-1 .phone {
     font-size: 1.5em; }
     footer.site-footer .footer-section-1 .phone svg {
@@ -398,12 +497,12 @@ footer.site-footer .widget {
     list-style: none;
     padding: 0; }
     footer.site-footer .widget-1 .contact svg {
-      color: #FF6D00; }
+      color: #72C032; }
   footer.site-footer .widget a {
     color: grey;
     transition: all 0.3s; }
     footer.site-footer .widget a:hover {
-      color: #FF6D00; }
+      color: #72C032; }
   footer.site-footer .widget h3 {
     color: white;
     text-transform: capitalize;
@@ -417,7 +516,7 @@ footer.site-footer .widget {
     footer.site-footer .widget .links a {
       text-transform: capitalize; }
   footer.site-footer .widget .site-title {
-    color: #FF6D00;
+    color: #72C032;
     text-transform: capitalize; }
 
 @media (max-width: 768px) {
