--- a/wp-content/themes/jfd/scss/home.scss
+++ b/wp-content/themes/jfd/scss/home.scss
@@ -31,7 +31,7 @@
                 background: $purple;
                 border-bottom: 0.3em $five solid;
                 &:hover {
-                    background: transparentize($purple, 0.5);
+                    background: darken($purple, 15%);
                 }
             }
 
@@ -40,7 +40,7 @@
                 border-bottom: 0.3em green solid;
 
                 &:hover {
-                    background: transparentize($green2, 0.5);
+                    background: darken($green2, 15%);
                 }
             }
         }
