--- a/wp-content/themes/jfd/scss/contact.scss
+++ b/wp-content/themes/jfd/scss/contact.scss
@@ -9,7 +9,7 @@
 
 
     .contact-header {
-        background-image: url(http://jfd.co/wp-content/uploads/2018/05/contact-header.jpg);
+        background-image: url(http://jfd.jforbes.site/wp-content/uploads/2018/05/contact-header.jpg);
         background-size: cover;
         position: relative;
         min-height: 600px;
