--- a/wp-content/themes/jfd/scss/faq.scss
+++ b/wp-content/themes/jfd/scss/faq.scss
@@ -12,7 +12,7 @@
     }
 
     .faq-header {
-        background-image: url(http://jfd.co/wp-content/uploads/2018/05/faq-header.jpg);
+        background-image: url(http://jfd.jforbes.site/wp-content/uploads/2018/05/faq-header.jpg);
         background-size: cover;
         position: relative; //        max-height: 600px;
         //        min-height: 300px;
