--- a/wp-content/themes/jfd/scss/home.scss
+++ b/wp-content/themes/jfd/scss/home.scss
@@ -166,7 +166,7 @@
 
         &-4 {
             padding: 5em 0;
-            background-image: url('http://jfd.co/wp-content/uploads/2018/05/s4-bg-2.png'); //            background-size: cover;
+            background-image: url('http://jfd.jforbes.site/wp-content/uploads/2018/05/s4-bg-2.png'); //            background-size: cover;
             background-position: center;
             text-align: center;
             color: white;
