--- a/wp-content/themes/jfd/style.css
+++ b/wp-content/themes/jfd/style.css
@@ -364,7 +364,7 @@ header#masthead {
 
 .home .main-section-4 {
   padding: 5em 0;
-  background-image: url("http://jfd.co/wp-content/uploads/2018/05/s4-bg-2.png");
+  background-image: url("http://jfd.jforbes.site/wp-content/uploads/2018/05/s4-bg-2.png");
   background-position: center;
   text-align: center;
   color: white;
@@ -438,7 +438,7 @@ header#masthead {
   padding: 5em 1em; }
 
 #faq .faq-header {
-  background-image: url(http://jfd.co/wp-content/uploads/2018/05/faq-header.jpg);
+  background-image: url(http://jfd.jforbes.site/wp-content/uploads/2018/05/faq-header.jpg);
   background-size: cover;
   position: relative;
   min-height: 600px;
@@ -503,7 +503,7 @@ header#masthead {
     CONTACT
 ==============*/
 #contact .contact-header {
-  background-image: url(http://jfd.co/wp-content/uploads/2018/05/contact-header.jpg);
+  background-image: url(http://jfd.jforbes.site/wp-content/uploads/2018/05/contact-header.jpg);
   background-size: cover;
   position: relative;
   min-height: 600px;
